[workspace.package]
authors = ["Dmitriy Kumshayev <dq@mail.coom>"]
license = "private"
description = "Compile‑time pipeline DSL for structuring computations"
edition = "2024"
keywords = ["pipeline"]
version = "0.0.0"

[workspace]
resolver = "2"

members = ["pipeline", "pipeline_derive", "pipeline_example"]

[workspace.dependencies]
chrono = "0.4"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0"
bitvec = "1.0.1"
