[workspace.package]
authors = ["Dmitriy Kumshayev <dq@mail.coom>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dkumsh/pipeline"
readme = "README.md"
keywords = ["pipeline", "dataflow", "dag", "macro", "workflow"]
description = "Compile‑time pipeline DSL for structuring computations"
edition = "2024"
version = "0.0.3"

[workspace]
resolver = "2"

members = ["pipeline", "pipeline_derive", "pipeline_example"]

[workspace.dependencies]
chrono = "0.4"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0"
bitvec = "1.0.1"

[patch.crates-io]
pipeline-dsl = { path = "pipeline" }
pipeline-dsl-macros = { path = "pipeline_derive" }
