[package]
name = "pipeline_derive"
authors.workspace = true
license.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
pipeline = { path = "../pipeline", version = "0.0.0" }
