[package]
name = "pipeline-dsl-macros"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Procedural macros for the pipeline DSL: #[pipeline], #[stage]."
repository.workspace = true
keywords.workspace = true
include = ["src/**", "assets/**", "Cargo.toml"]

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = "1.0.133"
proc-macro-crate = "3.2.0"

