[package]
name = "pipeline_example"
authors.workspace = true
license.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true }
pipeline_derive = { path = "../pipeline_derive", version = "0.0.0" }
pipeline = { path = "../pipeline", version = "0.0.0" }
anyhow = "1.0.93"
thiserror = "2.0.3"