[package]
name = "pipeline_example"
authors.workspace = true
license.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true }
pipeline-dsl = { path = "../pipeline" }
anyhow = "1.0.93"
thiserror = "2.0.3"
